--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,5 @@ markers =
     files: Маркировка для тестов, связанных с файлами.
     courses: Маркировка для тестов, связанных с курсами.
     regression: Маркировка для регрессионных тестов.
+    exercises: Маркировка для тестов, связанных с упражнениями.
     authentication: Маркировка для тестов, связанных с аутентификацией.
