--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,16 +56,41 @@ jobs:
         run: |
           pytest -m regression --alluredir=allure-results --numprocesses 2  # Запускаем тесты, отмеченные как "regression", генерируем результаты для Allure
 
-      # 8. Шаг для получения истории отчётов Allure, если она существует
+      # 8. Шаг для сохранения папки с результатами тестов как артефакт
+      - name: Upload allure-results as artifact
+        uses: actions/upload-artifact@v3
+        if: always()  # Сохраняем артефакт независимо от результата тестов
+        with:
+          name: allure-results
+          path: allure-results/
+          retention-days: 1  # Храним артефакт не более 1 дня, чтобы сэкономить место
+
+  publish-report:
+    needs: run-tests  # Запускать только после завершения run-tests
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1. Шаг, который будет клонировать ваш репозиторий на машину GitHub Actions
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      # 2. Шаг для загрузки артефакта allure-results из предыдущей джобы
+      - name: Download allure-results artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: allure-results
+          path: allure-results
+
+      # 3. Шаг для получения истории отчётов Allure, если она существует
       - name: Get Allure history
-        uses: actions/checkout@v4  # Опять клонируем репозиторий, чтобы получить историю отчётов
+        uses: actions/checkout@v4  # Клонируем репозиторий, чтобы получить историю отчётов
         if: always()  # Всегда выполняем, независимо от успеха или неудачи предыдущих шагов
         continue-on-error: true  # Если здесь возникнет ошибка, workflow всё равно продолжит выполнение
         with:
           ref: gh-pages  # Указываем ветку gh-pages для получения отчётов
           path: gh-pages  # Указываем путь для сохранения отчётов
 
-      # 9. Шаг для генерации и отображения отчёта Allure
+      # 4. Шаг для генерации и отображения отчёта Allure
       - name: Generates Allure Report with history
         uses: simple-elf/allure-report-action@v1.12  # Используем готовое решение из GitHub Marketplace для генерации Allure отчёта
         if: always()  # Этот шаг тоже всегда выполняется
@@ -73,7 +98,7 @@ jobs:
           allure_results: allure-results  # Указываем каталог с результатами тестов
           allure_history: allure-history  # Указываем каталог для истории отчётов Allure
 
-      # 10. Шаг для деплоя отчёта Allure на GitHub Pages, чтобы его можно было просматривать в браузере
+      # 5. Шаг для деплоя отчёта Allure на GitHub Pages, чтобы его можно было просматривать в браузере
       - name: Deploy report to Github Pages
         if: always()  # Выполняется всегда, независимо от успеха других шагов
         uses: peaceiris/actions-gh-pages@v4  # Используем GitHub Action для публикации отчёта на GitHub Pages
